<resources>
    <string name="app_name">Books</string>
    <string name="year_written">year_written</string>
    <string name="author">Author</string>
    <string name="name">Name</string>
    <string name="_2008">2008</string>
    <string name="by_creating_an_account_or_signing_you_agree_to_our"><u>By creating an account or signing you agree to our</u></string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="opens_side_menu">opens side menu</string>
    <string name="opens_notifications_page">opens notifications page</string>
    <string name="about">Bu kitob lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum opens notifications page.</string>
    <string name="opens_scan_page">opens scan page</string>
    <string name="searchs_from_books">searchs from books</string>
    <string name="hi_user">Hi User</string>
    <string name="my_library">My Library</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="categories">Categories</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="book_images">Book images</string>
    <string name="book_name">Book name</string>
    <string name="author_name">Author Name</string>
    <string name="asd">|</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_more">Discover more</string>
    <string name="comments">Comments</string>
    <string name="home">Home</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="log_in">Log in</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password"><u>Forgot your password ?</u></string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account ?</u></string>
    <string name="sign_up">Sign up</string>
    <string name="other_sign_in_options">Other sign in options</string>
    <string name="logo">logo</string>
    <string name="crate_account">Crate account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="log_out">Log out</string>
    <string name="_1_500_reads">1 500 reads</string>
    <string name="go">Go</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="hello">Hello</string>
</resources>