<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/opens_side_menu"
        android:src="@drawable/back_arrow_icon"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#165C73"
        android:text="@string/add_to_wishlist"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="8dp"
        app:icon="@drawable/add_icon"
        app:iconSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/menu_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/menu_button" />

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/book_images"
        android:scaleType="centerInside"
        android:src="@drawable/img_1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/menu_button" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="18dp"
        android:scaleType="centerCrop"
        android:src="@drawable/author_image"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/book_image"
        app:shapeAppearance="@style/circularImage" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView">

        <TextView
            android:id="@+id/book_name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name" />


        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/rating" />

        <TextView
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asd" />
        <TextView
            android:layout_marginStart="12dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1 500 reads" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="18dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>