<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9898FF"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="#63E6E2"
                    android:textSize="40sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textColorHint="#99EBEBF5"
                    app:hintTextColor="#99EBEBF5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:hint="@string/username_or_email"
                        android:inputType="textEmailAddress"
                        android:textColor="#99EBEBF5"
                        android:textColorHint="#99EBEBF5" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textColorHint="#99EBEBF5"
                    app:hintTextColor="#99EBEBF5"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#99EBEBF5"
                        android:textColorHint="#99EBEBF5" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/forgot_your_password"
                    android:textAlignment="center"
                    android:textColor="#99EBEBF5"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#63E6E2"
                    android:paddingVertical="12dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/don_t_have_an_account"
                    android:textAlignment="center"
                    android:textColor="#99EBEBF5"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#31E11E"
                    android:paddingVertical="12dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_sign_in_options"
                    android:textAlignment="center"
                    android:textColor="#99EBEBF5"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/google" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:padding="4dp"
                        android:src="@drawable/facebook_image" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/apple" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1216545" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.88" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>