<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="6dp"
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:elevation="0dp"
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:src="@drawable/menu_icon"
            app:borderWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/opens_side_menu" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:elevation="0dp"
            android:contentDescription="@string/opens_notifications_page"
            android:id="@+id/notification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:src="@drawable/notification_icon"
            app:borderWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/opens_scan_page"
            android:id="@+id/qr_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:src="@drawable/qr_scan_icon"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/notification_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/searchs_from_books"
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:src="@drawable/search_icon"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/qr_scan_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:overScrollMode="always"
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <com.google.android.material.tabs.TabLayout
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabIndicatorColor="#33000000"
        android:animateLayoutChanges="true"
        app:tabIndicatorFullWidth="true"
        app:tabTextColor="#979797"
        app:tabIndicator="@drawable/my_tab"
        app:tabSelectedTextColor="#165C73"
        app:tabRippleColor="#00FFFFFF"
        app:tabIconTint="#FF8C00"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorHeight="60dp"
        app:tabIndicatorAnimationDuration="300"
        app:tabIndicatorGravity="stretch"
        />

</androidx.constraintlayout.widget.ConstraintLayout>